# learning_entities_nn_ga

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.hpp  main.cpp
classes/: Entity.cpp  Food.cpp  Map.cpp  NeuralNetwork.cpp  Neuron.cpp  Point.cpp
headers/: Entity.h  Food.h  Map.h  NeuralNetwork.h  Neuron.h  Point.h
